class component -> function component

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>hi hw2</title>
+    <title>feedback 4</title>
 
     <script type="text/javascript">
       (function (l) {
